<resources>
    <string name="app_name">Charme Local</string>
    <string name="accountTitle">Account</string>
    <string name="homeTitle">Home</string>
    <string name="searchTitle">Search</string>
    <string name="cartItemDescription">Cart</string>
    <string name="cartTitle">Cart</string>
    <string name="backItemDescription">Return to previous page</string>
    <string name="accountPhotoDescription">Profile photo</string>
    <string name="requestAccountName">Name and surname</string>
    <string name="requestAccountCellPhone">Cell phone</string>
    <string name="requestAccountEmail">E-mail</string>
    <string name="requestAccountPassword">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="appIcon">Icon</string>
    <string name="registerCustomer">Register as a customer</string>
    <string name="registerSeller">Register as a seller</string>
    <string name="singInText">Sign in</string>
    <string name="requestAccountCpfCnpj">CPF/CNPJ</string>
    <string name="cpfCnpjHint">xxxxxxxxx-xx</string>
    <string name="passwordHint">**********</string>
    <string name="registerTitle">Register</string>
    <string name="requestAccountCpf">CPF</string>
    <string name="nameHint">xxxxxx xxxxx xx xxxxxxxxx</string>
    <string name="cellPhoneHint">(xx)xxxxxxxxx</string>
    <string name="emailHint">xxxxxxxxxxx@xxxxx.com</string>
    <string name="singUpText">Sing Up</string>
    <string name="requestAccountCPNJ">CNPJ</string>
    <string name="CnpjHint">xxxxxxxx/xxxx-xx</string>
    <string name="requestStoreName">Store name</string>
    <string name="storeNameHint">xxxxxxxxxxxxxx</string>
</resources>