<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterCustomerActivity">

    <LinearLayout
        android:id="@+id/upNavView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/backButtom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:contentDescription="@string/backItemDescription"
            android:src="@drawable/backicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/registerTitle"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/textCpf"
        style="@style/textTitleStyle"
        android:layout_below="@+id/upNavView"
        android:text="@string/requestAccountCpf" />

    <EditText
        android:id="@+id/editCpf"
        style="@style/editTextStyle"
        android:layout_below="@+id/textCpf"
        android:autofillHints=""
        android:hint="@string/cpfCnpjHint"
        android:inputType="number"
        android:maxLength="11"
        android:minWidth="150dp" />

    <TextView
        android:id="@+id/textName"
        style="@style/textTitleStyle"
        android:layout_below="@+id/editCpf"
        android:text="@string/requestAccountName" />

    <EditText
        android:id="@+id/editName"
        style="@style/editTextStyle"
        android:layout_below="@+id/textName"
        android:autofillHints=""
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:minWidth="200dp" />

    <TextView
        android:id="@+id/textCellPhone"
        style="@style/textTitleStyle"
        android:layout_below="@+id/editName"
        android:text="@string/requestAccountCellPhone" />

    <EditText
        android:id="@+id/editCellPhone"
        style="@style/editTextStyle"
        android:layout_below="@+id/textCellPhone"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corners"
        android:hint="@string/cellPhoneHint"
        android:inputType="phone"
        android:maxLength="11"
        android:minWidth="140dp" />

    <TextView
        android:id="@+id/textEmail"
        style="@style/textTitleStyle"
        android:layout_below="@+id/editCellPhone"
        android:text="@string/requestAccountEmail" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/editTextStyle"
        android:layout_below="@+id/textEmail"
        android:autofillHints=""
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minWidth="200dp" />

    <TextView
        android:id="@+id/textPassword"
        style="@style/textTitleStyle"
        android:layout_below="@+id/editEmail"
        android:text="@string/requestAccountPassword" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/editTextStyle"
        android:layout_below="@+id/textPassword"
        android:autofillHints=""
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:minWidth="130dp" />

    <Button
        android:id="@+id/singUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/singUpText" />

</RelativeLayout>