<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".initial.AccountFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/accountPhotoDescription"
        android:src="@drawable/accounticon" />

    <TextView
        style="@style/textTitleStyle"
        android:layout_gravity="center"
        android:text="@string/requestAccountName" />

    <TextView
        android:id="@+id/editName"
        style="@style/editTextStyle"
        android:layout_gravity="center"
        android:text="xxxxxx xxxxx xxxxxxxxxx"
        android:textSize="20sp" />

    <TextView
        style="@style/textTitleStyle"
        android:layout_gravity="center"
        android:text="@string/requestAccountCellPhone" />

    <TextView
        android:id="@+id/editCellPhone"
        style="@style/editTextStyle"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="(xx)xxxxxxxxx" />

    <TextView
        style="@style/textTitleStyle"
        android:layout_gravity="center"
        android:text="@string/requestAccountEmail" />

    <TextView
        android:id="@+id/editEmail"
        style="@style/editTextStyle"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="xxxxxxx@xxxx.com" />


</LinearLayout>