<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChoiceActivity">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="116dp"
        android:layout_height="115dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/appIcon"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/cadClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#50C8B2"
        android:text="@string/registerCustomer"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/cadSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#50C8B2"
        android:text="@string/registerSeller"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/singIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadSeller"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/singInText"
        android:textColor="@color/black" />

</RelativeLayout>